Fix main menu button spacing when the VisualEnhancementNext flag is enabled
This patch results in an expected visual change for the main menu button when the flag is on
When comparing with master with the flag off, this patch will still show a 1px difference for the main menu button, as well as user menu and language button. These are not introduced by this patch and are due to the flush classes taking into account the 1px border

--- a/resources/skins.vector.styles/components/Header.less
+++ b/resources/skins.vector.styles/components/Header.less
@@ -27,7 +27,9 @@
 	}
 
 	#mw-sidebar-button {
-		margin-right: @margin-horizontal-sidebar-button-icon; // Accidentally the same.
+		.vector-feature-visual-enhancement-next-disabled & {
+			margin-right: @margin-horizontal-sidebar-button-icon;
+		}
 	}
 
 	.vector-header-start,
